--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<p class="mbr-text mb-4 mbr-fonts-style display-7">Onde a expertise em terraplanagem encontra a inovação em maquinário. Somos líderes na indústria, fornecendo soluções de aluguel de máquinas e mão de obra especializada para transformar terrenos em obras-prima de engenharia.
 <br>
 <br>Nossos serviços são cuidadosamente projetados para atender às necessidades de construtoras, empreiteiras e proprietários de projetos de todos os tamanhos. Com um compromisso inabalável com a eficiência, segurança e excelência, estamos prontos para superar suas expectativas em cada projeto.&nbsp;</p>
-					<div class="mbr-section-btn mb-4"><a class="btn btn-primary display-7" href="https://mobiri.se">Conheça nossos serviços</a></div>
+					<div class="mbr-section-btn mb-4"><a class="btn btn-primary display-7" href="">Conheça nossos serviços</a></div>
 				</div>
 			</div>
 			<div class="mbr-figure col-12 col-md-8"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/2lDcyfgIJLs?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=2lDcyfgIJLs" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
