--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="">
-						<img src="https://r.mobirisesite.com/336263/assets/images/logo-strong-locacao-1-2-1-523x370.png?v=1QXbXU" alt="Mobirise Website Builder" style="height: 5rem;">
+						<img src="https://r.mobirisesite.com/336263/assets/images/logo-strong-locacao-1-2-1-523x370.png?v=1QXbXU" alt="Vinicius Desenvolvedor" style="height: 5rem;">
 					</a>
 				</span>
 				<span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html#header05-1"></a></span>
@@ -196,7 +196,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-816x544.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-816x544.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5">
@@ -213,7 +213,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-816x538.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-816x538.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5">
@@ -231,7 +231,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-816x266.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-816x266.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5">
@@ -257,7 +257,7 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 col-md-12 col-lg-7 image-wrapper">
-				<img class="w-100" src="https://img.freepik.com/fotos-gratis/trabalhador-masculino-com-escavadeira-em-pedreira-de-areia_1303-28106.jpg?w=1380&t=st=1698610359~exp=1698610959~hmac=7e1a9933ebaac0ddba0bb0d911be15214ecf27901210441f95c827ad0bb5bb21" alt="Mobirise Website Builder">
+				<img class="w-100" src="https://img.freepik.com/fotos-gratis/trabalhador-masculino-com-escavadeira-em-pedreira-de-areia_1303-28106.jpg?w=1380&t=st=1698610359~exp=1698610959~hmac=7e1a9933ebaac0ddba0bb0d911be15214ecf27901210441f95c827ad0bb5bb21" alt="Vinicius Desenvolvedor">
 			</div>
 			<div class="col-12 col-lg col-md-12">
 				<div class="text-wrapper align-left">
@@ -297,7 +297,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tU6IZBMvdP-modal" data-bs-target="#tU6IZBMvdP-modal">
-                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x772.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
+                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x772.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -306,7 +306,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tU6IZBMvdP-modal" data-bs-target="#tU6IZBMvdP-modal">
-                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x773.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
+                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x773.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -315,7 +315,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tU6IZBMvdP-modal" data-bs-target="#tU6IZBMvdP-modal">
-                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/escavadeira-pesada-para-cavar-na-luz-do-dia-1158x1448.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
+                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/escavadeira-pesada-para-cavar-na-luz-do-dia-1158x1448.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -324,7 +324,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tU6IZBMvdP-modal" data-bs-target="#tU6IZBMvdP-modal">
-                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x869.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
+                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x869.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -333,7 +333,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tU6IZBMvdP-modal" data-bs-target="#tU6IZBMvdP-modal">
-                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x776.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
+                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x776.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -342,7 +342,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tU6IZBMvdP-modal" data-bs-target="#tU6IZBMvdP-modal">
-                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x772.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
+                    <img class="w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x772.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-tU6IZBMvdP" data-bs-target="#lb-tU6IZBMvdP">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -358,25 +358,25 @@
                         <div class="carousel slide" id="lb-tU6IZBMvdP" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x869.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x869.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x772.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x772.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x773.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x773.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/escavadeira-pesada-para-cavar-na-luz-do-dia-1158x1448.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/escavadeira-pesada-para-cavar-na-luz-do-dia-1158x1448.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x869.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x869.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x776.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1158x776.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x772.jpg?v=1QXbXU" alt="Mobirise Website Builder">
+                                    <img class="d-block w-100" src="https://r.mobirisesite.com/336263/assets/images/mbr-1-1158x772.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor">
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
@@ -424,7 +424,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-3">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-596x444.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
+						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-596x444.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="0" data-bs-slide-to="0">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5"><strong>Escavadeira</strong></h5>
@@ -440,7 +440,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-3">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-596x397.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
+						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-596x397.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="1" data-bs-slide-to="1">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5">
@@ -458,7 +458,7 @@
 			<div class="item features-image col-12 col-md-6 col-lg-3">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-596x447.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
+						<img src="https://r.mobirisesite.com/336263/assets/images/mbr-596x447.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="2" data-bs-slide-to="2">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5">
@@ -475,7 +475,7 @@
 			</div><div class="item features-image col-12 col-md-6 col-lg-3">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://r.mobirisesite.com/336263/assets/images/corte3-1380x920.jpg?v=1QXbXU" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
+						<img src="https://r.mobirisesite.com/336263/assets/images/corte3-1380x920.jpg?v=1QXbXU" alt="Vinicius Desenvolvedor" data-slide-to="3" data-bs-slide-to="3">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-5"><strong>Escavadeira Hidráulica</strong></h5>
