--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
  target="_blank"
  data-aos="zoom-in-up" data-aos-delay="400"
 >
-  <img src="/assets/whatssapp.svg" alt="Botao whatsapp" />
+  <img src="https://www.svgrepo.com/show/134581/whatsapp.svg" alt="Botao whatsapp" />
   <span class="tooltip-text">Faça um orçamento!</span>
 </a>
 
