--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                             }
                         </style>
                         
-                        <h2 class="mbr-section-title mb-4 mbr-fonts-style display-2">
-                            <strong>Bem vindo a <span style="font-weight: normal;">STRONG.</span></strong>
-                        </h2>
+                        <h1 class="mbr-section-title mb-4 mbr-fonts-style display-2">
+                            <img src="assets/logo.png" alt="logop">
+                        </h1>
                         <p class="mbr-text mb-4 mbr-fonts-style display-7">Onde a expertise em terraplanagem encontra a inovação em maquinário. Somos líderes na indústria, fornecendo soluções de aluguel de máquinas e mão de obra especializada para transformar terrenos em obras-prima de engenharia.
                             <br>
                             Nossos serviços são cuidadosamente projetados para atender às necessidades de construtoras, empreiteiras e proprietários de projetos de todos os tamanhos.
