--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         </style>
                         
                         <h1 class="mbr-section-title mb-4 mbr-fonts-style display-2">
-                            <img src="assets/logo.png" alt="logop">
+                            <img src="https://uploaddeimagens.com.br/images/004/652/455/original/logo.png?1698758053" alt="logop">
                         </h1>
                         <p class="mbr-text mb-4 mbr-fonts-style display-7">Onde a expertise em terraplanagem encontra a inovação em maquinário. Somos líderes na indústria, fornecendo soluções de aluguel de máquinas e mão de obra especializada para transformar terrenos em obras-prima de engenharia.
                             <br>
