--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
  <!-- Button Whatsapp -->
 
  <a 
- href="https://api.whatsapp.com/send?phone=5531991256434text=Quero%20fazer%20um%20Orçamento%20hoje!"
+ href="https://api.whatsapp.com/send?phone=5531991256434&text=Ol%C3%A1%2C%20gostaria%20de%20fazer%20um%20or%C3%A7amento"
  class="btn-whatsapp"
  target="_blank"
  data-aos="zoom-in-up" data-aos-delay="400"
@@ -593,7 +593,7 @@
   <span class="tooltip-text">Faça um orçamento!</span>
 </a>
 
-
+<script src="https://r.mobirisesite.com/336263/assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/smoothscroll/smooth-scroll.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/ytplayer/index.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/dropdown/js/navbar-dropdown.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/masonry/masonry.pkgd.min.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/imagesloaded/imagesloaded.pkgd.min.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/theme/js/script.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/gallery/player.min.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/gallery/script.js"></script>  <script src="https://r.mobirisesite.com/336263/assets/formoid/formoid.min.js"></script>
 <script src="script.js"></script>
     
 
